<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.ui.login.register.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:divider="@drawable/empty_divider"
        android:orientation="vertical"
        android:showDividers="middle">

        <EditText
            android:id="@+id/emailRegisterET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email_ph"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordRegisterET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_ph"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/repasswordRegisterET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/repassword_ph"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/submitRegisterBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register" />
    </LinearLayout>
</RelativeLayout>